--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="CV created by Đoàn Thanh Lâm" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="keywords"
-      content="CV, Resume, Đoàn Thanh Lâm, Portfolio, Web Developer"
-    />
-    <meta
-      name="google-site-verification"
-      content="nqDFMptisNyKrXu40eU_NBQ-VyC87JANCMQ74ImUO2E"
-    />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Đoàn Thanh Lâm CV</title>
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- SEO Meta -->
+  <title>Đoàn Thanh Lâm • Full-Stack Developer | Symfony • React • Rust</title>
+  <meta name="description"
+    content="Personal profile of Đoàn Thanh Lâm — a passionate full-stack developer skilled in Symfony, Node.js, React.js, and Rust. Explore projects, skills, and tech stack." />
+  <meta name="keywords"
+    content="Đoàn Thanh Lâm, Doan Thanh Lam, full-stack developer, Symfony developer, React developer, Rust developer, resume, portfolio, web developer, developer" />
+  <meta name="google-site-verification" content="nqDFMptisNyKrXu40eU_NBQ-VyC87JANCMQ74ImUO2E" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <!-- Open Graph / Social Media -->
+  <meta property="og:title" content="Đoàn Thanh Lâm • Full-Stack Developer" />
+  <meta property="og:description"
+    content="Explore the profile of Đoàn Thanh Lâm — full-stack developer with hands-on experience in Symfony, Node.js, React.js, and Rust." />
+  <meta property="og:url" content="https://dtl-cv.vercel.app/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image"
+    content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUHxigjKH-pDXMIH90DhtIM6IKwNl9KZrP4g&s" />
+
+  <!-- App-specific -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/snoopy_PNG82.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
