--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
   <!-- App-specific -->
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/snoopy_PNG82.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <meta name="google-site-verification" content="g3khIR42b0Ud8HqjPUqkGV3XWQfJ4t-yyYFvuq4ufnA" />
 </head>
 
 <body>
