--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="google-site-verification" content="nqDFMptisNyKrXu40eU_NBQ-VyC87JANCMQ74ImUO2E" />
 
   <!-- Open Graph / Social Media -->
-  <meta property="og:title" content="Đoàn Thanh Lâm • Full-Stack Developer" />
+  <meta property="og:title" content="Đoàn Thanh Lâm Developer" />
   <meta property="og:description"
     content="Explore the profile of Đoàn Thanh Lâm — full-stack developer with hands-on experience in Symfony, Node.js, React.js, and Rust." />
   <meta property="og:url" content="https://dtl-cv.vercel.app/" />
